--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -70,6 +70,15 @@ body {
     margin-bottom:80px;
   }
 
+  .container_fluid {
+    max-width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    width: 85%;
+  }
+
   a {
     padding: .78571429em 3.5em .78571429em 2.5em;
     font-size: 14px;
