--- a/css/main.scss
+++ b/css/main.scss
@@ -203,6 +203,7 @@
       margin-bottom:300px;
       @include sm {
         height:auto !important;
+        margin-bottom:80px;
       }
 
       .board {
@@ -278,6 +279,9 @@
   .slider_products, .deck120  {
     padding:100px 0px 120px;
     position:relative;
+    @include sm {
+      padding-bottom:50px;
+    }
 
 
     .container {
@@ -534,7 +538,7 @@
               left:55%;
 
               @include sm {
-                top:50%;
+                top:40%;
                 z-index:999;
               }
             }
@@ -804,7 +808,7 @@
               top:35%;
               left:55%;
               @include sm {
-                top: 50%;
+                top: 40%;
                 z-index:999;
               }
             }
@@ -849,6 +853,7 @@
       right: 0;
       @include sm {
         max-width:80%;
+        top:40%;
       }
     }
     .slider {
@@ -861,6 +866,9 @@
         flex-wrap: wrap;
         height: auto;
         transition: transform 0.35s ease-in-out;
+        @include sm {
+          max-width:100% !important;
+        }
         .slider-item {
 
         }
@@ -893,8 +901,7 @@
           }
 
           @include sm {
-            width:25px;
-            height:25px;
+            display:none;
           }
         }
 
@@ -981,6 +988,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            min-height:500px;
 
             span {
               font-size: 80px;
@@ -1109,6 +1117,9 @@
         font-size: 2.5em;
         font-style: italic;
         text-transform: uppercase;
+        @include sm {
+          font-size:2em;
+        }
       }
     }
     .product {
