--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -71,6 +71,7 @@
 
       @include sm {
         padding : 220px 20px 0px 30px;
+        background-position:80% bottom;
       }
 
       .dp_container-jumbo {
@@ -92,6 +93,7 @@
           margin-left: 190px;
           padding-left:5px;
           margin-top:30px;
+          text-transform: lowercase !important;
           @include sm {
             margin-left:50px;
             font-size:12px;
@@ -174,6 +176,9 @@
             letter-spacing: 1.2px;
             text-align: center;
             font-weight:bold;
+            @include sm {
+              letter-spacing:initial;
+            }
           }
         }
 
@@ -655,6 +660,10 @@
                 .product_price {
                   top: -40%;
                   left: 50%;
+                  @include sm {
+                    top:inherit;
+                    left:0;
+                  }
                 }
 
               }
@@ -667,6 +676,11 @@
                 .product_price {
                   top: -35%;
                   left: 70%;
+                  @include sm {
+                    bottom:-100%;
+                    left:70%;
+                    top:inherit;
+                  }
                 }
 
               }
@@ -727,6 +741,10 @@
                 .product_price {
                   top: 0%;
                   right: 15%;
+                  @include sm {
+                    top:-35%;
+                    right:0;
+                  }
                 }
 
               }
@@ -749,7 +767,8 @@
                   top: 10%;
                   right: 80%;
                   @include sm {
-                    right: -10%;
+                    right: -50%;
+                    top:10%;
                   }
                 }
 
@@ -1044,6 +1063,7 @@
           @include sm {
             max-width:100%;
             width:60%;
+            display:none;
           }
         }
         &#photo_2 {
@@ -1056,6 +1076,7 @@
             top:-5%;
             max-width:40%;
             width:40%;
+            display:none;
           }
         }
         &#photo_3 {
@@ -1064,10 +1085,11 @@
           max-width:40%;
           z-index:3;
           @include sm {
-            top: 5%;
-            left: 20%;
-            max-width: 70%;
-            width: 70%;
+            top: 15%;
+            left: 0;
+            max-width: 80%;
+            width: 80%;
+            z-index:99;
           }
         }
         &#photo_4 {
@@ -1076,6 +1098,7 @@
           max-width:30%;
           z-index:4;
           @include sm {
+            top:-13%;
             max-width:70%;
             width:70%;
           }
@@ -1089,6 +1112,7 @@
             left:-15%;
             max-width:80%;
             width:80%;
+            bottom:-5%;
           }
         }
         &#photo_6 {
@@ -1099,8 +1123,9 @@
           @include sm {
             right:-10%;
             left:initial;
-            max-width:70%;
-            width:70%;
+            max-width:60%;
+            width:60%;
+            bottom:5%;
           }
         }
       }
