--- a/assets/css/_reset.scss
+++ b/assets/css/_reset.scss
@@ -167,7 +167,7 @@ body {
 
   h1 {
       font-size: 4em;
-      font-family: 'RobotoCondensed';
+      font-family: Roboto-Condensed,Arial,Helvetica,sans-serif;
       font-weight: 700;
       color:white;
       margin:0px;
@@ -175,7 +175,7 @@ body {
 
   h2 {
     font-size : 4em;
-    font-family : 'RobotoCondensed';
+    font-family : Roboto-Condensed,Arial,Helvetica,sans-serif;
     font-weight:700;
     font-style:italic;
     margin-bottom:40px;
@@ -183,13 +183,13 @@ body {
 
   h2 span {
 
-    font-family : "RobotoCondensed";
+    font-family : Roboto-Condensed,Arial,Helvetica,sans-serif;
     font-style: italic;
     font-weight:400;
   }
 
   h3 {
-    font-family : 'RobotoCondensed';
+    font-family : Roboto-Condensed,Arial,Helvetica,sans-serif;
     font-weight:700;
   }
 
@@ -197,14 +197,14 @@ body {
     margin-bottom:20px;
     margin-top:5px;
     text-transform : uppercase;
-    font-family : 'RobotoCondensed';
+    font-family : Roboto-Condensed,Arial,Helvetica,sans-serif;
     font-weight:700;
     font-style:italic;
     font-size:28px;
   }
 
   p {
-    font-family : "RobotoCondensed";
+    font-family : Roboto-Condensed,Arial,Helvetica,sans-serif;
     margin-bottom:30px;
     font-size:16px;
     line-height:20px;
@@ -214,7 +214,7 @@ body {
   }
 
   span {
-    font-family : "RobotoCondensed";
+    font-family : Roboto-Condensed,Arial,Helvetica,sans-serif;
     &.italic {
       font-style:italic;
     }
