--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -70,7 +70,7 @@
       z-index:1;
 
       @include sm {
-        padding : 220px 20px 0px 30px;
+        padding : 140px 20px 0px 30px;
         background-position:80% bottom;
       }
 
@@ -129,6 +129,9 @@
         align-items: flex-start;
         padding-right: 25%;
         margin-top:30px;
+        @include sm {
+          margin-top:0px;
+        }
       }
 
     }
@@ -206,6 +209,7 @@
     .features {
       position:relative;
       margin-bottom:300px;
+      min-height:500px;
       @include sm {
         height:auto !important;
         margin-bottom:80px;
@@ -329,7 +333,7 @@
 
           span {
 
-            font-family : "RobotoCondensed";
+            font-family : Roboto-Condensed,Arial,Helvetica,sans-serif;
             font-weight:bold;
             font-style: italic;
             margin-bottom:5px;
@@ -391,7 +395,7 @@
 
           span {
             text-align:center;
-            font-family: "RobotoCondensed", sans-serif;
+            font-family: Roboto-Condensed,Arial,Helvetica,sans-serif;
             font-weight:700;
             font-size:45px;
             padding : 6px 30px 10px;
@@ -405,7 +409,7 @@
           color: #333333;
           text-transform: uppercase;
           font-weight: 700;
-          font-family: "RobotoCondensed", sans-serif;
+          font-family: Roboto-Condensed,Arial,Helvetica,sans-serif;
           position: absolute;
           font-size: 12px;
         }
@@ -1159,7 +1163,7 @@
           margin-bottom:25px;
           span {
             margin-left:20px;
-            font-family: "RobotoCondensed", sans-serif;
+            font-family: Roboto-Condensed,Arial,Helvetica,sans-serif;
             font-weight: 700;
             font-size: 35px;
             padding: 6px 30px 10px;
